# csc461_project

./: .gitignore  .gitmodules  CMakeLists.txt  NetClient.c  Questions.txt  README.md  client.c  clientOld.c  encoder  encoder.cpp  main.cpp  net.c  server.c  serverOld.c  shader_program.h
nativeScreen/: CMakeLists.txt  Screen.cpp  Screen.h  Texture.h  TextureRGB.cpp  TextureRGB.h
src/: Debug.cpp  Debug.h  Program.cpp  Program.h  debug.cpp  debug.h  main.cpp  program.cpp  program.h  shader.fs.glsl  shader.vs.glsl
src/Codec/: Codec.h
src/Codec/Packets/: DE265Packet.h  OpenH264Packet.cpp  OpenH264Packet.h  Packet.h  VPXPacket.cpp  VPXPacket.h
src/Codec/Transcoders/: DE265Transcoder.cpp  DE265Transcoder.h  Decoder.h  Encoder.h  Open264Transcoder.cpp  Open264Transcoder.h  Transcoder.h  VPXHelper.c  VPXHelper.h  VPXTranscoder.cpp  VPXTranscoder.h
src/Graphics/: Graphics.cpp  Graphics.h  GraphicsDebug.cpp  GraphicsDebug.h  GraphicsResource.h  Texture.cpp  Texture.h
src/Graphics/Shaders/: Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  textureShader.fs.glsl  textureShader.vs.glsl
src/IO/: Image.h  ImageBGRA.cpp  ImageBGRA.h  ImageRGB.cpp  ImageRGB.h  ImageSRGB.cpp  ImageSRGB.h  ImageYUV420.cpp  ImageYUV420.h  ImageYUV444.cpp  ImageYUV444.h  ScreenCapture.cpp  ScreenCapture.h
src/IO/Args/: Argument.h  ArgumentDecoder.cpp  ArgumentDecoder.h  ArgumentNetworkAddr.cpp  ArgumentNetworkAddr.h  ArgumentNetworkMode.cpp  ArgumentNetworkMode.h
src/Interop/: AVCaptureSession.h  AVCaptureSession.mm  CMakeLists.txt
src/graphics/: _graphics.h  graphics.cpp  graphics.h  graphics_resource.h  texture2d.cpp  texture2d.h
src/graphics/shaders/: textureShader.fs.glsl
